# libadwaitamm

./: .clang-format  .gitignore  meson.build
.github/workflows/: meson-fedora.yml
demo/: adw-demo-debug-info.cc  adw-demo-debug-info.h  adw-demo-preferences-window.cc  adw-demo-preferences-window.h  adw-demo-window.cc  adw-demo-window.h  adwaitamm-demo.cc  templatewidget.h
demo/pages/about/: adw-demo-page-about.cc  adw-demo-page-about.h
demo/pages/animations/: adw-demo-page-animations.cc  adw-demo-page-animations.h
demo/pages/avatar/: adw-demo-page-avatar.cc  adw-demo-page-avatar.h
demo/pages/buttons/: adw-demo-page-buttons.cc  adw-demo-page-buttons.h
demo/pages/carousel/: adw-demo-page-carousel.cc  adw-demo-page-carousel.h
demo/pages/clamp/: adw-demo-page-clamp.cc  adw-demo-page-clamp.h
demo/pages/dialogs/: adw-demo-page-dialogs.cc  adw-demo-page-dialogs.h
demo/pages/flap/: adw-demo-page-flap.cc  adw-demo-page-flap.h  adw-flap-demo-window.cc  (+1 more)
examples/hello-world/: hello.cc
libadwaita/: libadwaitamm.h
libadwaita/libadwaitamm/: init.cc  init.h  meson.build  selectionlistmodelimpl.cc  selectionlistmodelimpl.h
libadwaita/src/: aboutdialog.ccg  aboutdialog.hg  aboutwindow.ccg  aboutwindow.hg  accentcolor.hg  actionrow.ccg  actionrow.hg  alertdialog.ccg  alertdialog.hg  animation.hg  animationtarget.ccg  animationtarget.hg  application.ccg  application.hg  applicationwindow.ccg  applicationwindow.hg  avatar.hg  banner.hg  bin.ccg  bin.hg  bottomsheet.hg  breakpoint.ccg  breakpoint.hg  breakpointbin.hg  breakpointcondition.hg  buttoncontent.hg  buttonrow.hg  carousel.hg  carouselindicatordots.hg  carouselindicatorlines.hg  clamp.hg  clamplayout.hg  clampscrollable.hg  comborow.hg  cssclassbinding.ccg  cssclassbinding.hg  dialog.ccg  dialog.hg  easing.ccg  easing.hg  (+92 more)
tests/: meson.build  org.gnome.Adwaita1.Test.metainfo.xml  test-about-dialog.cc  test-about-window.cc  test-accent-color.cc  test-action-row.cc  test-alert-dialog.cc  test-animation-target.cc  test-animation.cc  test-application-window.cc  test-avatar.cc  test-banner.cc  test-bin.cc  test-bottom-sheet.cc  test-breakpoint-bin.cc  test-breakpoint.cc  test-button-content.cc  test-button-row.cc  test-carousel-indicator-dots.cc  test-carousel-indicator-lines.cc  test-carousel.cc  test-clamp-layout.cc  test-clamp-scrollable.cc  test-clamp.cc  test-combo-row.cc  test-css-class-binding.cc  test-dialog.cc  test-easing.cc  test-entry-row.cc  test-enum-list-model.cc  test-expander-row.cc  test-flap.cc  test-header-bar.cc  test-inline-view-switcher.cc  test-leaflet.cc  test-message-dialog.cc  test-multi-layout-view.cc  test-navigation-split-view.cc  test-navigation-view.cc  test-overlay-split-view.cc  (+32 more)
tools/: README.md  generate_defs_and_docs.sh  generate_signals.sh  generate_vfuncs_defs.py  update_extra_defs_types.py
tools/extra_defs_gen/: generate_defs_libadwaita.cc  meson.build
tools/m4/: convert_libadwaita.m4
(+20 files in other folders)
